feat: Add ability to add additional factory methods for relationship models to a node in the static model (#840)
Co-authored-by: Michael Simons <michael.simons@neo4j.com>